--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | the-vampire-escape2</title>
+    <title>Unity WebGL Player | a-vampire-s-escape</title>
     <link rel="shortcut icon" href="webgl-build/TemplateData/favicon.ico">
     <link rel="stylesheet" href="webgl-build/TemplateData/style.css">
     <script src="webgl-build/TemplateData/UnityProgress.js"></script>
@@ -18,7 +18,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">the-vampire-escape2</div>
+        <div class="title">a-vampire-s-escape</div>
       </div>
     </div>
   </body>
