--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="webgl-build/TemplateData/UnityProgress.js"></script>
     <script src="webgl-build/Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "webgl-build/Build/webgl.json", {onProgress: UnityProgress});
+      var gameInstance = UnityLoader.instantiate("gameContainer", "webgl-build/Build/webgl-build.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
@@ -18,7 +18,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">a-vampire-s-escape</div>
+        <div class="title"></div>
       </div>
     </div>
   </body>
